# GlassCoder

./: .gitignore  AUTHORS  CODINGSTYLE  ChangeLog  ChangeLog~  INSTALL  Makefile.am  NEWS  PACKAGE_VERSION  README  README.md  acinclude.m4  autogen.sh  build_debs.sh.in  configure.ac  get_distro.sh  glasscoder.spec.in  link_common.sh
conf/: Makefile.am
conf/httpd/: Makefile.am  README.httpd  hls.conf  hls_methods.pl
debian/: Makefile.am  changelog  changelog.src  control  control.src  copyright  rules
docs/: Makefile.am  glasscoder-ipc.xml  glasscoder.1  glasscoder.html  glasscoder.xml  glasscoder.xml.in  glasscommander.xml  glassgui.1  glassgui.html  glassgui.xml
icons/: Makefile.am  back.xpm  glasscoder-16x16.xpm  minussign.xpm  plussign.xpm
plugins/: Makefile.am  install_pypad.sh.in  pypad_glasscoder.exemplar  pypad_glasscoder.py
src/: Makefile.am  aaccodec.cpp  aaccodec.h  alsadevice.cpp  alsadevice.h  asihpidevice.cpp  audiodevice.cpp  audiodevice.h  audiodevicefactory.cpp  cmdswitch.cpp  cmdswitch.h  codec.cpp  codec.h  codecfactory.cpp  codecfactory.h  connector.cpp  connector.h  connectorfactory.cpp  connectorfactory.h  filedevice.cpp  filedevice.h  glasscoder.cpp  glasscoder.h  glasslimits.h  heaaccodec.cpp  heaaccodec.h  hlsconnector.cpp  hlsconnector.h  iceconnector.cpp  iceconnector.h  icyconnection.cpp  icyconnection.h  icyconnector.cpp  icyconnector.h  jack.cpp  jackdevice.cpp  jackdevice.h  layer3.cpp  mpegl2codec.cpp  mpegl2codec.h  (+11 more)
src/common/: Makefile.am  asihpi.cpp  asihpi.h  audiodevice.cpp  audiodevice.h  cmdswitch.cpp  cmdswitch.h  codec.cpp  codec.h  codecdialog.cpp  codecdialog.h  codeviewer.cpp  codeviewer.h  combobox.cpp  connector.cpp  connector.h  glasslimits.h  guiapplication.cpp  guiapplication.h  logging.cpp  logging.h  messagewidget.h  metaevent.cpp  metaevent.h  paths.h.in  profile.cpp  ringbuffer.cpp  segmeter.cpp  segmeter.h  serverdialog.cpp  serverdialog.h  sourcedialog.cpp  sourcedialog.h  spinbox.cpp  statuswidget.cpp  statuswidget.h  stereometer.cpp  stereometer.h  stereotool.cpp  stereotool.h  (+2 more)
src/glasscoder/: Makefile.am  aaccodec.cpp  aaccodec.h  alsadevice.cpp  alsadevice.h  asihpidevice.cpp  asihpidevice.h  audiodevicefactory.cpp  audiodevicefactory.h  codecfactory.cpp  codecfactory.h  config.cpp  config.h  connectorfactory.cpp  connectorfactory.h  fdkcodec.cpp  fdkcodec.h  filearchiveconnector.cpp  filearchiveconnector.h  fileconnector.cpp  fileconnector.h  fileconveyor.cpp  fileconveyor.h  filedevice.cpp  filedevice.h  getconveyor.cpp  getconveyor.h  glasscoder.cpp  glasscoder.h  glassconv.cpp  glassconv.h  heaaccodec.cpp  heaaccodec.h  hlsconnector.cpp  hlsconnector.h  httpconnection.cpp  httpconnection.h  httpserver.cpp  httpserver.h  httpuser.cpp  (+31 more)
src/glasscommander/: Makefile.am  configdialog.cpp  configdialog.h  deletedialog.cpp  deletedialog.h  filenamevalidator.cpp  filenamevalidator.h  glasscommander.cpp  glasscommander.h  glasswidget.cpp  glasswidget.h  instancedialog.cpp  instancedialog.h  playmeter.cpp  playmeter.h
src/glassgui/: Makefile.am  codecdialog.cpp  codecdialog.h  codeviewer.cpp  combobox.cpp  combobox.h  glassgui.cpp  glassgui.h  hpiinputlistview.cpp  hpiinputlistview.h  hpiwidget.cpp  hpiwidget.h  messagewidget.cpp  profile.cpp  profile.h  segmeter.cpp  serverdialog.cpp  serverdialog.h  sourcedialog.cpp  sourcedialog.h  spinbox.h  statuswidget.cpp  stereometer.cpp  streamdialog.cpp  streamdialog.h
src/tests/: Makefile.am  pipe_connect.cpp  pipe_connect.h  urldecode.cpp  urldecode.h  urlencode.cpp  urlencode.h
xdg/: Makefile.am  glasscommander.desktop  glassgui.desktop
